[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/GUI/InfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/game_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/GUI/Stats.gd" type="Script" id=3]

[node name="Stats" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Container" type="Control" parent="Background" index="1"]
margin_right = 128.0
margin_bottom = 92.0
mouse_filter = 2

[node name="StatsLabel" type="Label" parent="Background/Container" index="0"]
margin_left = 16.0
margin_top = 13.0
margin_right = 110.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.92549, 0.596078, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Stats"
align = 1

[node name="StrengthLabel" type="Label" parent="Background/Container" index="1"]
margin_left = 43.0
margin_top = 38.0
margin_right = 108.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.839216, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "3 (+3 dmg)"

[node name="Label" type="Label" parent="Background/Container" index="2"]
margin_left = 18.0
margin_top = 38.0
margin_right = 41.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.92549, 0.494118, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "STR:"

[node name="Label2" type="Label" parent="Background/Container" index="3"]
margin_left = 18.0
margin_top = 47.0
margin_right = 41.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.92549, 0.494118, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "AGI:"

[node name="Label3" type="Label" parent="Background/Container" index="4"]
margin_left = 18.0
margin_top = 29.0
margin_right = 41.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.92549, 0.494118, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Vit:"

[node name="Label4" type="Label" parent="Background/Container" index="5"]
margin_left = 18.0
margin_top = 69.0
margin_right = 41.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.92549, 0.286275, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "dmg:"

[node name="AgilityLabel" type="Label" parent="Background/Container" index="6"]
margin_left = 43.0
margin_top = 47.0
margin_right = 115.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.839216, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "3 (0.8 atk/s)"

[node name="VitalityLabel" type="Label" parent="Background/Container" index="7"]
margin_left = 43.0
margin_top = 29.0
margin_right = 107.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.839216, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "3 (34 HP)"

[node name="DmgLabel" type="Label" parent="Background/Container" index="8"]
margin_left = 43.0
margin_top = 69.0
margin_right = 107.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.839216, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "4.2 dps"

[node name="Label5" type="Label" parent="Background/Container" index="9"]
margin_left = 18.0
margin_top = 60.0
margin_right = 41.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.92549, 0.286275, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "att:"

[node name="AttackLabel" type="Label" parent="Background/Container" index="10"]
margin_left = 43.0
margin_top = 60.0
margin_right = 120.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 44, 5 )
custom_colors/font_color = Color( 0.839216, 0.92549, 0.0431373, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1d3+3 (3-6)"
